Img bug on iOS

--- a/css/style.scss
+++ b/css/style.scss
@@ -327,7 +327,7 @@ ul{
       width: 100%;
 
       img{
-        width: 100%;
+        width: 99%;
       }
     }
 
